# SeL-NAL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate_stub.py  test_CatastrophicForgetting.py  test_capacity.py  test_catastrophic_forgetting.py  tests.ipynb  transformer.ipynb
SequentialGroup/: SequentialGroup.pyi
SequentialGroup/include/: Bundle.h  Bundle.inl  Column.h  Column.inl  Group.h  LSTB.h  Link.inl  Node.h
SequentialGroup/src/: Group.cpp  SequentialGroup.cpp
cpp/: helpers.hpp
cpp/include/: Buffer.h  LSTB.inl  Link.h  Node.inl
cpp/src/: Bundle.cpp  Column.cpp  Group.cpp  Link.cpp  Node.cpp  SequentialGroup.cpp
narsese/: narsese.pyi
pyBodhi/SequentialGroup/: Group.py  __init__.py
pyBodhi/narsese/: __init__.py
utils/: Profiler.py  dataset.py  draw_group.py
